--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "framer-motion": "^8.0.2",
     "next": "13.1.1",
     "postcss": "^8.4.20",
+    "postcss-import": "^15.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
